pushing a generic update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       var ws = new WebSocket(host);
       ws.onmessage = function (event) {
         var li = document.createElement('li');
-        li.innerHTML = JSON.parse(event.data);
+        console.log(JSON.parse(event.data));
+        li.innerHTML = JSON.parse(event.data).mymsg;
         document.querySelector('#pings').appendChild(li);
       };
     </script>
